# move-fuzzer

./: .gitignore  .gitmodules  README.md  setup.sh
cli/: .coverage_map.mvcov  Cargo.toml
cli/src/: main.rs  options.rs  project.rs  templates.rs  utils.rs
cli/src/options/: add.rs  build.rs  cmin.rs  coverage.rs  fmt.rs  init.rs  list.rs  run.rs  tmin.rs
move-fuzzer/: Cargo.toml
move-fuzzer/src/: lib.rs  main.rs
move-fuzzer/src/move_runner/: arbitrary_inputs.rs  mod.rs  types.rs  utils.rs
move-fuzzer/src/move_runner/module_manager/: mod.rs  module_loader.rs  module_store.rs
